--- a/estilo.css
+++ b/estilo.css
@@ -1,48 +1,3 @@
-.drop-button{
-    background-color:  #8DEBF7;
-    color: #fff;
-    padding: 15px;
-    border-radius: 5px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .drop-button:hover{
-    background-color: #2EABAB;
-  }
-
-  .dropdown-content{
-    position: absolute;
-    left: -100px;
-    min-width: 100px;
-    transition: 1s;
-    } 
-  
-  .drop-button:focus + .dropdown-content{
-    position: relative;
-    left: 0;
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .body{
     margin: 0;
 }
@@ -71,7 +26,7 @@
     top: 0;
     position: fixed;
     width: 367px;
-    left: -100%;
+    /*left: -100%;*/
     transition: .4s;
     background: white;
     padding: 8px 16px 24px;
@@ -95,10 +50,47 @@
     font-weight: 700;
 }
 
+.nav__button{
+    background: none;
+    border-style: none;
+    cursor: pointer;
+    padding: 12px 8px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.nav__button:hover{
+    text-decoration: underline;
+}
+
 .nav__list{
     padding: 0;
     margin: 0;
     list-style: none;
+
+
+    /*position: absolute;
+    left: -100px;
+    min-width: 100px;
+    z-index: 1;
+    transition: .4s;*/
+
+    position: absolute;
+    visibility: hidden;
+    transition: 0.3s;
+    z-index: 20;
+}
+
+.nav__item{
+    padding: 10px 8px;
+    margin: 5px 0;
+}
+
+.nav__button:focus + .nav__list{
+    /*position: relative;
+    left: 0;*/
+    visibility: visible;
+    position: relative;
 }
 
 .nav__item:hover{
@@ -109,34 +101,24 @@
     text-decoration: none;
     text-align: left;
     color: black;
+    font-weight: 700;
+    font-size: 16px;  
+    cursor: pointer;  
 }
 
-.nav__link:hover{
-    
+.nav__text{
+    cursor: pointer;
+    padding: 12px 8px;
+    font-size: 20px;
+    font-weight: 700;
+    text-decoration: none;
+    color: black;
+    display: flex;
+    flex-direction: column;
 }
 
-.nav__list list--second{
-
-}
-
-.nav__item nav__item--second{
-
-}
-
-.nav__link nav__link--second{
-
-}
-
-.nav__list list--third{
-
-}
-
-.nav__item nav__item--third{
-
-}
-
-.nav__link nav__link--third{
-
+.nav__text:hover{
+    text-decoration: underline;
 }
 
 .header__img{
