--- a/estilo.css
+++ b/estilo.css
@@ -3,10 +3,17 @@
 }
 
 .header{
+    background: white;
+    position: sticky;
+    z-index: 3;
+    top: 0;
+}
+
+.header__container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+   
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 24px;
@@ -25,13 +32,20 @@
 .nav{
     top: 0;
     position: fixed;
-    width: 367px;
-    /*left: -100%;*/
+    width: 80%;
+    left: -200%;
     transition: .4s;
     background: white;
     padding: 8px 16px 24px;
     overflow-y: scroll;
     height: 100%;
+    font-family: Arial;
+}
+
+.nav__list{
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 .nav__login{
@@ -50,47 +64,28 @@
     font-weight: 700;
 }
 
-.nav__button{
+.nav__text{
     background: none;
     border-style: none;
     cursor: pointer;
-    padding: 12px 8px;
     font-size: 20px;
     font-weight: 700;
+    margin: 0;
+    padding: 12px 8px;
 }
 
-.nav__button:hover{
+.nav__text:hover, .footer__label:hover, .footer__item:hover{
     text-decoration: underline;
 }
 
-.nav__list{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-
-
-    /*position: absolute;
-    left: -100px;
-    min-width: 100px;
-    z-index: 1;
-    transition: .4s;*/
-
-    position: absolute;
-    visibility: hidden;
-    transition: 0.3s;
-    z-index: 20;
+.nav__link--element{
+    color: black;
+    display: block;
+    text-decoration: none;
 }
 
 .nav__item{
-    padding: 10px 8px;
-    margin: 5px 0;
-}
-
-.nav__button:focus + .nav__list{
-    /*position: relative;
-    left: 0;*/
-    visibility: visible;
-    position: relative;
+    padding: 12px 8px;  
 }
 
 .nav__item:hover{
@@ -103,42 +98,449 @@
     color: black;
     font-weight: 700;
     font-size: 16px;  
-    cursor: pointer;  
+    cursor: pointer; 
 }
 
-.nav__text{
-    cursor: pointer;
-    padding: 12px 8px;
-    font-size: 20px;
-    font-weight: 700;
-    text-decoration: none;
-    color: black;
-    display: flex;
-    flex-direction: column;
+.nav__line{
+    margin: 8px 8px 14px;
+    border: none;
+    border-bottom: 1px solid #e0e0e0;
 }
 
-.nav__text:hover{
-    text-decoration: underline;
+.nav__item--second{
+    margin-left: 15px;
 }
 
 .header__img{
-
+    width: 132px;
+    height: 100%;
+    padding: 11px 0;
 }
 
-.header__link{
-
+.navig__list{
+    padding: 0;
+    list-style: none;
+    display: flex;
+    overflow-y: auto;  
 }
 
-@media screen and (min-width: 850px) {
+.navig__item, .navig__button{
+    padding: 12px;
+    border: 1px solid black;
+    margin: 0 8px;
+    border-radius: 12px;
+    cursor: pointer;
+    display: flex;
+    background: white;
+}
+
+.navig__item:hover, .navig__button:hover{
+    background: black;
+    color: white;
+}
+
+.navig__link{
+    color: black;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    font-family: Arial;
+}
+
+.navig__item:hover a, .navig__button:hover a{
+    color: white;
+}
+
+.icono{
+    margin-left: 20px;
+}
+
+.navig--second{
+    position: fixed;
+    top: 0;
+    left: -100%;
+    background: white;
+    font-family: Arial, Helvetica, sans-serif;
+    transition: 0.3s;
+    height: 100%;
+    overflow: scroll;
+    z-index: 1;
+}
+
+.nav__list--button{
+    padding: 24px 12px;
+}
+
+.navig__text{
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    padding: 24px;
+    margin: 0;
+}
+
+.navig__item--second{
+    padding: 12px;
+    line-height: 24px;
+}
+
+.navig__link--second{
+    font-size: 18px;
+}
+
+.navig__button:focus + .navig--second{
+    left: 0;   
+    width: 100%;
+}
+
+.article__search{
+    background: #c9f2e3;
+}
+
+.article__search--container{
+    padding: 8px 24px 178px;
+    position: relative;
+    margin: 20px 0 120px;
+}
+
+.article__text{
+    font-size: 24px;
+    line-height: 28px;
+    height: 70px;
+    margin: 18px 0;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+    display: fleX;
+    align-items: flex-end;
+    justify-content: center;
+    letter-spacing: -1px;
+}
+
+.article__item{
+    position: relative;
+}
+
+.article__input{
+    border-radius: 12px;
+    width: 100%;
+    box-shadow: 0 4px 4px rgba(0,0,0,.25);
+    border: none;
+    padding: 12px 50px;
+    font-size: 16px; 
+    height: 58px;
+}
+
+.article__icono{
+    position: absolute;  
+    left: 25px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
+.article__img{
+    position: absolute;
+    left: 50%;
+    bottom: -25%;
+    transform: translate(-50%);
+
+    width: 100%;
+    max-height: 253px;
+    max-width: 386px;
+}
+
+.article__header{
+    
+    padding: 0 24px;
+}
+
+.article__header--container{
+    padding: 0 24px;
+    position: relative;
+}
+
+.article__line{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translate(0, -50%);
+    z-index: -1;
+    margin: 0;
+    left: 0;
+    box-sizing: border-box;
+}
+
+.article__title{ 
+    padding: 0 12px;  
+    font-size: 24px;
+    font-weight: 900;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    display: inline-block;
+
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    background: white;
+    text-align: center;
+}
+
+.article__subtitle{
+    padding: 0 24px;
+    font-size: 28px;
+    font-family: sans-serif;
+    font-weight: 700;
+    margin: 12px 0;
+}
+
+.gallery{
+    display: flex;
+    overflow-y: scroll;
+    padding-bottom: 12px;
+}
+
+.gallery__container{
+    padding: 0 24px;
+    position: relative;
+}
+
+.gallery__link{
+    text-decoration: none;
+    color: black;
+}
+
+.gallery__link:hover{
+    text-decoration: underline;
+    color: #474747;
+}
+
+.gallery__img{
+    width: 400px;
+    height: 300px;
+    padding-bottom: 12px;
+}
+
+.gallery__descrip{
+    font-weight: 700;
+    font-family: arial;
+    font-size: 18px;
+    margin: 0;
+}
+
+.gallery__save{
+    position: absolute;
+    z-index: 2;
+    top: 10px;
+    right: 34px;
+}
+
+.gallery__save:hover{
+    color: salmon;
+}
+
+.article__premios{
+    background: #004f32;
+    margin-top: 42px;
+}
+
+.article__premios--container{
+    padding: 64px 24px 412px;
+    position: relative;
+}
+
+.article__premios--logo{
+    display: block;
+    margin: 0 auto 20px;
+}
+
+.article__premios--p{
+    margin: 0 auto 36px;
+    font-weight: 700;
+    font-size: 36px;
+    width: 240px;
+    font-family: sans-serif;
+    color: white;
+    text-align: center;
+}
+
+.article__premios--link{
+    color: white;
+    background: black;
+    padding: 10px 16px;
+    border-radius: 12px;
+    font-weight: 700;
+    text-decoration: none;
+    display: block;
+    width: 150px;
+    height: 20px;
+    margin: 0 auto 36px;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+.article__premios--link:hover{
+    background: #474747;
+}
+
+.article__premios--img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 407px;
+    object-fit: cover;
+}
+
+.footer{
+    background: #faf1ed;
+    padding: 32px 0;
+}
+
+.footer__container{
+    padding: 0 24px;
+}
+
+.footer__list{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.footer__input { 
+    position: absolute;
+    opacity: 0;
+}
+
+.footer__label{
+    color: #474747;
+    font-size: 16px;
+    font-family: Arial;
+    display: block;
+    cursor: pointer;
+    padding-bottom: 32px;
+}
+
+.footer__accordion--sub {
+    padding-bottom: 16px;
+    display: none; 
+    padding-left: 36px;
+}
+
+.footer__label > .footer__icono--minus{
+    display: none;
+    margin-right: 22px;
+}
+
+.footer__label > .footer__icono--plus{
+    margin-right: 22px;
+}
+  
+.footer__input:checked ~ .footer__label{
+    padding-bottom: 12px;
+}
+
+.footer__input:checked ~ .footer__label > .footer__icono--minus {
+    display: inline-block;
+}
+
+.footer__input:checked ~ .footer__label > .footer__icono--plus {
+    display: none;
+}
+
+.footer__input:checked ~ .footer__accordion--sub {
+    display: block;
+}
+
+.footer__item{
+    cursor: pointer;
+    padding-bottom: 7px;
+    display: flex;
+}
+
+.footer__link{
+    color: black;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.footer__text{
+    margin: 0;
+}
+
+.footer__select{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__select--item{
+    border-radius: 12px;
+    cursor: pointer;
+    padding: 7px 14px;
+    border-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    width: 47%;
+}
+
+.footer__icono--redes{
+    padding: 32px 0;
+}
+
+.footer__icono--redes i{
+    padding-right: 22px;
+    cursor: pointer;
+}
+
+.footer__politic{
+    display: flex; 
+}
+
+.footer__img{
+    margin-right: 15px;
+}
+
+.politic__text{
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 12px;
+    margin: 7px 0;
+}
+
+.politic__link{
+    color: black;
+    margin-right: 16px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.politic__link:hover{
+    color: #474747;
+}
+
+@media screen and (min-width: 665px){
+    /*Para la galeria*/
+}
+
+@media screen and (min-width: 845px) {
     .header__button {
         display: none;
     }
 
 	.nav {
-        
+        /*display: block;
+        left: 0;*/
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .header__button {
+        display: none;
     }
 
-	.nav__list {
-        
+	.nav {
+        /*display: block;
+        left: 0;*/
     }
 }
