--- a/estilo.css
+++ b/estilo.css
@@ -30,22 +30,29 @@
 }
 
 .nav{
-    top: 0;
     position: fixed;
+    background: white;
+    padding: 8px 16px 24px;
+    overflow: auto;
+    font-family: Arial;
+}
+
+.nav--offcanvas{
+    top: 0;
     width: 80%;
     left: -200%;
     transition: .4s;
-    background: white;
-    padding: 8px 16px 24px;
-    overflow-y: scroll;
     height: 100%;
-    font-family: Arial;
 }
 
 .nav__list{
     padding: 0;
     margin: 0;
     list-style: none;
+}
+
+.nav__list--line{
+    border-top: 1px solid #c0b7b7;
 }
 
 .nav__login{
@@ -64,7 +71,7 @@
     font-weight: 700;
 }
 
-.nav__text{
+.nav__element{
     background: none;
     border-style: none;
     cursor: pointer;
@@ -74,11 +81,11 @@
     padding: 12px 8px;
 }
 
-.nav__text:hover, .footer__label:hover, .footer__item:hover{
+.nav__element:hover, .footer__label:hover, .footer__item:hover{
     text-decoration: underline;
 }
 
-.nav__link--element{
+.nav__element--link{
     color: black;
     display: block;
     text-decoration: none;
@@ -117,37 +124,35 @@
     padding: 11px 0;
 }
 
-.navig__list{
+.nav--main{
+    position: relative;
     padding: 0;
     list-style: none;
-    display: flex;
-    overflow-y: auto;  
+    display: flex;  
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
-.navig__item, .navig__button{
+.nav__list--main{
+    display: flex;
+}
+
+.nav__item--main, .nav__button--main{
     padding: 12px;
     border: 1px solid black;
     margin: 0 8px;
     border-radius: 12px;
     cursor: pointer;
-    display: flex;
     background: white;
+    display: flex;
 }
 
-.navig__item:hover, .navig__button:hover{
+.nav__item--main:hover, .nav__button--main:hover{
     background: black;
     color: white;
 }
 
-.navig__link{
-    color: black;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    font-family: Arial;
-}
-
-.navig__item:hover a, .navig__button:hover a{
+.nav__item--main:hover a, .nav__button--main:hover a{
     color: white;
 }
 
@@ -155,23 +160,15 @@
     margin-left: 20px;
 }
 
-.navig--second{
-    position: fixed;
+.nav--button{
     top: 0;
     left: -100%;
-    background: white;
-    font-family: Arial, Helvetica, sans-serif;
     transition: 0.3s;
     height: 100%;
-    overflow: scroll;
-    z-index: 1;
+    z-index: 3;
 }
 
-.nav__list--button{
-    padding: 24px 12px;
-}
-
-.navig__text{
+.nav__text{
     text-align: center;
     font-size: 20px;
     font-style: normal;
@@ -180,22 +177,25 @@
     margin: 0;
 }
 
-.navig__item--second{
+.nav__item--button{
     padding: 12px;
     line-height: 24px;
 }
 
-.navig__link--second{
+.nav__link--button{
     font-size: 18px;
+    font-weight: 600;
 }
 
-.navig__button:focus + .navig--second{
+.nav__button--main:focus + .nav--button{
     left: 0;   
     width: 100%;
 }
 
 .article__search{
     background: #c9f2e3;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 .article__search--container{
@@ -229,6 +229,8 @@
     padding: 12px 50px;
     font-size: 16px; 
     height: 58px;
+    position: relative;
+    z-index: 2;
 }
 
 .article__icono{
@@ -241,17 +243,19 @@
 
 .article__img{
     position: absolute;
-    left: 50%;
+    right: 50%;
     bottom: -25%;
-    transform: translate(-50%);
+    transform: translate(50%);
 
     width: 100%;
     max-height: 253px;
     max-width: 386px;
+    z-index: 1;
 }
 
 .article__header{
-    
+    max-width: 1100px;
+    margin: 0 auto;
     padding: 0 24px;
 }
 
@@ -291,12 +295,16 @@
     font-family: sans-serif;
     font-weight: 700;
     margin: 12px 0;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 .gallery{
     display: flex;
     overflow-y: scroll;
     padding-bottom: 12px;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 .gallery__container{
@@ -532,15 +540,55 @@
         /*display: block;
         left: 0;*/
     }
+
+    .article__search{
+        background: none;
+        padding: 0 24px;
+    }
+    
+    .article__search--container{
+        padding: 72px 8.333% 108px;
+        margin-bottom: 80px;
+        background: #c9f2e3;
+        border-radius: 12px;
+    }
+    
+    .article__text{
+        font-size: 36px;
+        line-height: 40px;
+        height: 80px;
+        margin: 8px 0 24px;
+        width: 47%;
+    }
+    
+    .article__input{
+        font-size: 18px; 
+        height: 60px;
+    }
+    
+    .article__img{
+        right: 0;
+        transform: none;
+        bottom: -5%;
+        width: 478px;
+        max-width: none;
+        max-height: none;
+    }
+    
+    .article__premios--container{
+        padding: 64px 24px 576px;
+    }
+
+    .article__premios--p{
+        width: 100%
+    }
+
+    .article__premios--img{
+        height: 600px;
+    }
+
 }
 
 @media screen and (min-width: 1024px) {
-    .header__button {
-        display: none;
-    }
-
-	.nav {
-        /*display: block;
-        left: 0;*/
-    }
+    
 }
