--- a/estilo.css
+++ b/estilo.css
@@ -126,7 +126,7 @@
 
 .nav--main{
     position: relative;
-    padding: 0;
+    padding: 18px 0;
     list-style: none;
     display: flex;  
     max-width: 1100px;
@@ -536,9 +536,8 @@
         display: none;
     }
 
-	.nav {
-        /*display: block;
-        left: 0;*/
+	.nav__list--main{
+        flex-wrap: wrap;
     }
 
     .article__search{
