--- a/estilo.css
+++ b/estilo.css
@@ -14,15 +14,19 @@
     justify-content: space-between;
     align-items: center;
    
-    max-width: 1100px;
+    max-width: 1325px;
     margin: 0 auto;
     padding: 0 24px;
 }
 
-.header__button{
+.header__item{
     background: none;
     border-style: none;
     cursor: pointer;
+    color: black;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
 
 .header__button:focus + .nav{
@@ -124,12 +128,28 @@
     padding: 11px 0;
 }
 
+.header__icon{
+    display: none;
+}
+
+.header__item--breakpoint{
+    margin-left: 22px;
+}
+
+.header__span{
+    display: none;
+}
+
+.nav__login--header{
+    margin: 0 0 0 22px;
+}
+
 .nav--main{
     position: relative;
     padding: 18px 0;
     list-style: none;
     display: flex;  
-    max-width: 1100px;
+    max-width: 1325px;
     margin: 0 auto;
 }
 
@@ -145,6 +165,12 @@
     cursor: pointer;
     background: white;
     display: flex;
+    position: relative;
+    width: max-content;
+}
+
+.nav__link--main{
+    padding-right: 40px;
 }
 
 .nav__item--main:hover, .nav__button--main:hover{
@@ -157,7 +183,8 @@
 }
 
 .icono{
-    margin-left: 20px;
+    right: 15px;
+    position: absolute;
 }
 
 .nav--button{
@@ -194,7 +221,7 @@
 
 .article__search{
     background: #c9f2e3;
-    max-width: 1100px;
+    max-width: 1325px;
     margin: 0 auto;
 }
 
@@ -254,7 +281,7 @@
 }
 
 .article__header{
-    max-width: 1100px;
+    max-width: 1325px;
     margin: 0 auto;
     padding: 0 24px;
 }
@@ -295,7 +322,7 @@
     font-family: sans-serif;
     font-weight: 700;
     margin: 12px 0;
-    max-width: 1100px;
+    max-width: 1325px;
     margin: 0 auto;
 }
 
@@ -303,7 +330,7 @@
     display: flex;
     overflow-y: scroll;
     padding-bottom: 12px;
-    max-width: 1100px;
+    max-width: 1325px;
     margin: 0 auto;
 }
 
@@ -532,12 +559,27 @@
 }
 
 @media screen and (min-width: 845px) {
-    .header__button {
+    .header__item {
         display: none;
+    }
+
+    .header__icon{
+        display: flex;
+    }
+
+    .header__item--breakpoint{
+        display: flex;
     }
 
 	.nav__list--main{
         flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .nav__item--main, .nav__button--main{
+        width: 23%;
+        margin-bottom: 16px;
+        box-sizing: border-box;
     }
 
     .article__search{
@@ -579,15 +621,94 @@
     }
 
     .article__premios--p{
-        width: 100%
+        width: 100%;
     }
 
     .article__premios--img{
         height: 600px;
     }
-
 }
 
 @media screen and (min-width: 1024px) {
+    .header__span{
+        display: block;
+        margin-left: 5px;
+        font-weight: 600;
+        font-size: 16px;
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    }
+
+    .article__premios--container{
+        padding: 0;
+    }
+
+    .article__premios--dat{
+        height: 600px;
+        width: 304px;
+        background: #004f32;
+        position: relative;
+        z-index: 1;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .footer__list{
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 22px;
+    }
+
+    .footer__label >.footer__icono--plus{
+        display: none;
+    } 
     
+    .footer__input:checked ~ .footer__label >.footer__icono--minus{
+        display: none;
+    }
+
+    .footer__accordion--sub {
+        display: block;
+        padding: 0;
+    }
+
+    .footer__link{
+        color: #474747;
+    }
+
+    .footer__label{
+        padding-bottom: 12px;
+    }
+
+    .footer__label:hover{
+        text-decoration: none;
+        cursor: default;
+    }
+
+    .footer__breakpoint{
+        display: flex; 
+    }
+
+    .footer__country{
+        order: 2;
+        width: 70%;
+    }
+
+    .footer__icono--redes{
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .footer__refer{
+        order: 1;
+    }
+
+}
+
+@media screen and (min-width: 1328px) {
+    .nav__list--main{
+        flex-wrap: nowrap;
+    }
+        
 }
